bk_ida/gccida/c2/ix86_expand_epilogue
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_expand_epilogue/src/i386.c:4858:22: error: use of undeclared identifier 'machine_mode'
v38 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000) == 0) ^ 5), i); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_expand_epilogue/src/i386.c:4961:22: error: use of undeclared identifier 'machine_mode'
v13 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 2); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_expand_epilogue/src/i386.c:4965:31: error: use of undeclared identifier 'machine_mode'
v15 = gen_rtx_fmt_ee( PLUS, ( machine_mode)v14, global_rtl[4], v13); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_expand_epilogue/src/i386.c:4969:22: error: use of undeclared identifier 'machine_mode'
v18 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), global_rtl[4]); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_expand_epilogue/src/i386.c:4975:31: error: use of undeclared identifier 'machine_mode'
v23 = gen_rtx_fmt_ee( PLUS, ( machine_mode)v14, global_rtl[2], v13); 
                              ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_expand_epilogue/src/obj/i386.o] Error 1
